--- a/Index.html
+++ b/Index.html
@@ -38,6 +38,8 @@
 
         input[type="radio"] {
             margin: 10px 0;
+            transform: scale(1.5); 
+            margin-right: 10px; 
         }
 
         button {
